Adding extension methods to the ClaimsPrincipal

--- a/src/Identity/Telegram.Identity.csproj
+++ b/src/Identity/Telegram.Identity.csproj
@@ -14,4 +14,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.3</TargetFrameworks>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Security.Claims" />
+  </ItemGroup>
 </Project>
