--- a/src/Telegram/Telegram.Bot.Extensions.csproj
+++ b/src/Telegram/Telegram.Bot.Extensions.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Vogen" />
     <PackageReference Include="System.Text.RegularExpressions.Usings" />
     <PackageReference Include="System.Text.Json.Usings" />
+    <PackageReference Include="System.ComponentModel.Usings" />
     <PackageReference Include="JustinWritesCode.Primitives" />
   </ItemGroup>
 </Project>
