--- a/Telegram.csproj
+++ b/Telegram.csproj
@@ -19,6 +19,6 @@
     <ProjectReference Include="./src/Constants/Telegram.Constants.csproj" />
     <ProjectReference Include="./src/Converters/Telegram.JsonConverters.csproj" />
     <ProjectReference Include="./src/Identity/Telegram.Identity.csproj" />
-    <ProjectReference Include="./src/Telegram/Telegram.Bot.Extensions.csproj" />
+    <ProjectReference Include="./src/Bot.Extensions/Telegram.Bot.Extensions.csproj" />
   </ItemGroup>
 </Project>
