--- a/src/Constants/Telegram.Constants.csproj
+++ b/src/Constants/Telegram.Constants.csproj
@@ -16,7 +16,7 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-   <PackageReference Include="System.Console" Condition="!$(DefineConstants.Contains('NETSTANDARD2_0_OR_GREATER'))" VersionOverride="[4.3.1,)" />
+   <!-- <PackageReference Include="System.Console" Condition="!$(DefineConstants.Contains('NETSTANDARD2_0_OR_GREATER'))" VersionOverride="[4.3.1,)" /> -->
    <Reference Include="System.Runtime.Numerics" Version="4.3.1" SpecificVersion="true" Condition="!$(DefineConstants.Contains('NETSTANDARD2_0_OR_GREATER'))" />
   </ItemGroup>
 </Project>
