--- a/Telegram.csproj
+++ b/Telegram.csproj
@@ -11,15 +11,16 @@
 -->
 
 <Project Sdk="Microsoft.NET.Sdk">
-  <Sdk Name="MetapackageSdk" />
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <IsAtRoot>true</IsAtRoot>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="./src/Constants/Telegram.Constants.csproj" />
-    <ProjectReference Include="./src/Converters/Telegram.JsonConverters.csproj" />
-    <ProjectReference Include="./src/Identity/Telegram.Identity.csproj" />
-    <ProjectReference Include="./src/Bot.Extensions/Telegram.Bot.Extensions.csproj" />
-  </ItemGroup>
+    <Sdk Name="MetapackageSdk" />
+    <PropertyGroup>
+        <TargetFramework>net7.0</TargetFramework>
+        <IsAtRoot>true</IsAtRoot>
+    </PropertyGroup>
+    <ItemGroup>
+        <ProjectReference Include="./src/Constants/Telegram.Constants.csproj" />
+        <ProjectReference Include="./src/Converters/Telegram.JsonConverters.csproj" />
+        <ProjectReference Include="./src/Identity/Telegram.Identity.csproj" />
+        <ProjectReference Include="./src/Bot.Extensions/Telegram.Bot.Extensions.csproj" />
+        <ProjectReference Include="./src/Telegram.Bot/src/Telegram.Bot/Telegram.Bot.csproj" />
+    </ItemGroup>
 </Project>
